--- a/Pages/BusinessIntelligence.html
+++ b/Pages/BusinessIntelligence.html
@@ -122,47 +122,86 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>Business Intelligence</h2>
+                <h2>Optimizing the quality of online courses through effective evaluation techniques</h2>
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/3a96456c-80b2-41b7-b69a-26264493acb8.jpg">
+                    <img src="../assets//images/blog/AdobeStock_214539382-1800x0-c-default.jpeg">
                 </figure>
             </div>
             <div class="content">
-                <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa 
-                    <strong>strong</strong>. Cum sociis natoque penatibus 
-                    et magnis dis parturient montes, nascetur ridiculus 
-                    mus. Donec quam felis, ultricies nec, pellentesque 
-                    eu, pretium quis, sem. Nulla consequat massa quis 
-                    enim. Donec pede justo, fringilla vel, aliquet nec, 
-                    vulputate eget, arcu. In enim justo, rhoncus ut, 
-                    imperdiet a, venenatis vitae, justo. Nullam dictum 
-                    felis eu pede <a class="external ext" href="#">link</a> 
-                    mollis pretium. Integer tincidunt. Cras dapibus. 
-                    Vivamus elementum semper nisi. Aenean vulputate 
-                    eleifend tellus. Aenean leo ligula, porttitor eu, 
-                    consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-                    dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-                    viverra nulla ut metus varius laoreet. Quisque rutrum. 
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. 
-                    Curabitur ullamcorper ultricies nisi.</p>
-                    <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <h3>Aenean commodo ligula eget dolor aenean massa</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Domain</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Edtech
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Customer-type:</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Online learning marketplace
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Situation</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The rise of online learning and certification platforms have transformed the lives of many. The ability to learn new skills anywhere and anytime has offered far greater opportunities for education than ever before. On the other end of the spectrum, it has also given tutors a way to monetize their expertise by creating content that can be purchased and consumed by learners from around the world.
+                        </p>
+                        <p>
+                            There are numerous online learning marketplaces where tutors can post their knowledge and learners can find courses to learn the skill of their interest. As more and more tutors sign up and upload their courses, maintaining the quality of the content offered becomes a challenge. The learners usually depend on user reviews to find and pick courses.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Complication</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The client, an online learning marketplace, has over 1,000 registered tutors and offers over 4,000 online courses. Yet, the client suffered a huge attrition rate of over 80%. More than 70% of its users who signed up and purchased a course did not complete it and over 95% users never purchased another course on their platform. The average completion rate for courses on their platform stood at just 23%.
+                        </p>
+                        <p>
+                            The client built an NLP model which helped them to analyse user reviews and remove tutors whose offerings were subpar. Besides this, the client also wanted to help tutors improve the quality of courses by assessing where and why users struggle in their learning paths and drop off. Thus, they approached the Pinhead analytics team.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Solution</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Our first task was to analyze the modules of a course and evaluate if they aided in fulfilling the specified learning outcome. With the help of tutors who peer reviewed the content offerings and the mentioned outcomes, we were able to generate a high-quality training dataset. This training dataset was then fed to a Classifier based on Logistic regression that would analyse and flag future courses based on whether or not they fulfil the learning requirements. 
+                        </p>
+                        <p>
+                            Then, we built a clustering model that would analyze user generated activity from logs and flag places where user drop-off rates are abnormally high. From the findings of this model, a feedback engine reaches out to users asking if they found a particular piece of content to be incoherent.
+                        </p>
+                        <p>
+                            Based on the feedback received from the users, the tutors are informed about the existing drop-off points within their course and are asked to improve the quality of the content and its structure.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Impact</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Within the first six months of deploying this solution, the course completion rates shot up to 46%. The client also witnessed an 80% increase in the number of users who continued their learning journey on the platform by purchasing a second course.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
