--- a/Pages/blog2.html
+++ b/Pages/blog2.html
@@ -122,47 +122,94 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>How an Online 2-wheeler services marketplace fixed its Digital marketing strategy</h2>
+                <h2>Hyperpersonalized Product Promotion for eCommerce using Advanced Machine Learning</h2>
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/3a96456c-80b2-41b7-b69a-26264493acb8.jpg">
+                    <img src="../assets//images/blog/AdobeStock_214539382-1800x0-c-default.jpeg">
                 </figure>
             </div>
             <div class="content">
-                <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa 
-                    <strong>strong</strong>. Cum sociis natoque penatibus 
-                    et magnis dis parturient montes, nascetur ridiculus 
-                    mus. Donec quam felis, ultricies nec, pellentesque 
-                    eu, pretium quis, sem. Nulla consequat massa quis 
-                    enim. Donec pede justo, fringilla vel, aliquet nec, 
-                    vulputate eget, arcu. In enim justo, rhoncus ut, 
-                    imperdiet a, venenatis vitae, justo. Nullam dictum 
-                    felis eu pede <a class="external ext" href="#">link</a> 
-                    mollis pretium. Integer tincidunt. Cras dapibus. 
-                    Vivamus elementum semper nisi. Aenean vulputate 
-                    eleifend tellus. Aenean leo ligula, porttitor eu, 
-                    consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-                    dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-                    viverra nulla ut metus varius laoreet. Quisque rutrum. 
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. 
-                    Curabitur ullamcorper ultricies nisi.</p>
-                    <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <h3>Aenean commodo ligula eget dolor aenean massa</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Domain</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Digital Marketing
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Customer-type:</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            DTC eCommerce Brand
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Situation</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            From online shopping to online media consumption, hyperpersonalized recommendation has taken the world by storm. Online shopping giants have sophisticated systems in place that analyze terabytes of data to make personalized product recommendations to its users.
+                        </p>
+                        <p>
+                            On the other hand, it is extremely difficult for DTC brands that operate on a much smaller scale to make personalized product promotions and recommendations. In the complex eCommerce ecosystem of today where a customer has tons of options to choose from, making personalized recommendations is one of the best ways to ensure consumer retention.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Complication</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Our client is a DTC brand which sells apparels and home decor products online. With a consumer base of over 50000 and the total SKU types exceeding a little over 2500, the client felt the need for running smart promotions through hyperpersonalized product recommendations to customers.
+                        </p>
+                        <p>
+                            Since slices of the customer data was silod across various data sources, it would be highly inefficient to build a Recommendation engine on top of the existing setup.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Resolution</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            At Pinhead analytics, we broke the problem down into minute problems and solved them:
+                            <ul>
+                                <li>
+                                    Pulled the data to a centralized warehouse with a faster, scalable architecture from the various CRM and marketing platforms to break the silos
+                                </li>
+                                <li>
+                                    Created a Recommendation engine that analyses customer behavior and create personalized product recommendations for every user profile
+                                </li>
+                                <li>
+                                    Built an orchestration mechanism that would send these recommendations over email & SMS in real-time to customers.
+                                </li>
+                                <li>
+                                    Used GPT-3 to make copy suggestions that would go along with the product recommendations.
+                                </li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Impact</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The project was deployed site-wide by the client. Through the orchestration tool that was built, 26,000 personalized product recommendation emails were sent to their customers just in the first month of its deployment. As a result, the client witnessed a 240% increase in revenue through email marketing for the corresponding month.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
