--- a/Pages/dataengineering.html
+++ b/Pages/dataengineering.html
@@ -122,47 +122,77 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>Data Engineering</h2>
+                <h2>Building and deployment of a smart News Recommendation System</h2>
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/3a96456c-80b2-41b7-b69a-26264493acb8.jpg">
+                    <img src="../assets//images/blog/AdobeStock_214539382-1800x0-c-default.jpeg">
                 </figure>
             </div>
             <div class="content">
-                <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa 
-                    <strong>strong</strong>. Cum sociis natoque penatibus 
-                    et magnis dis parturient montes, nascetur ridiculus 
-                    mus. Donec quam felis, ultricies nec, pellentesque 
-                    eu, pretium quis, sem. Nulla consequat massa quis 
-                    enim. Donec pede justo, fringilla vel, aliquet nec, 
-                    vulputate eget, arcu. In enim justo, rhoncus ut, 
-                    imperdiet a, venenatis vitae, justo. Nullam dictum 
-                    felis eu pede <a class="external ext" href="#">link</a> 
-                    mollis pretium. Integer tincidunt. Cras dapibus. 
-                    Vivamus elementum semper nisi. Aenean vulputate 
-                    eleifend tellus. Aenean leo ligula, porttitor eu, 
-                    consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-                    dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-                    viverra nulla ut metus varius laoreet. Quisque rutrum. 
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. 
-                    Curabitur ullamcorper ultricies nisi.</p>
-                    <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <h3>Aenean commodo ligula eget dolor aenean massa</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Domain</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Recommender Systems
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Business</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Online media
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Situation</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The advent and rise of social media giants has inadvertently made news publishers fight with each other to lure and keep users engaged on their platform. Though users occasionally open and read the news published by a particular media outlet, there is no guarantee that the same user would regularly keep coming to the site.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Complication</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The client, a leading TV and online news publishing company was witnessing a continuous drop in the engagement levels of users. The Weekly-active-users metric was for their website was on a continuous decline for over 26 weeks. They had no news recommendation system in place and was instead relying on a solution that would provide links to the most recently published articles. As the pages per session metric experienced a huge hit, the client approached Pinhead analytics to build and deploy a smart news recommendation system.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Solution</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            For users who are visiting the site for the first time, we decided to go for a model that would do content based recommendation. As a first-time user reads an article, the other articles recommended to him/her are computed based of content similarity, freshness and correlation of persons or events specified in the article. Apart from the content based recommendations, the user would also be given links to read the popular articles from across different domains.  
+                        </p>
+                        <p>
+                            As the user opens and reads these articles, the system starts accumulating user data. Another recommender model that makes use of collaborative filtering now looks for similarities in interests and behavior between the user in consideration and the rest of the users. It then combines this information with the results from the content based recommender to make the best possible recommendation.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Impact</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Within two weeks of implementing the recommendation system, the client witnessed a 34% increase in the session duration and a 26% rise in the pages per session.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
