--- a/Pages/MachienLearning.html
+++ b/Pages/MachienLearning.html
@@ -122,47 +122,86 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>Machine Learning & AI</h2>
+                <h2>Identifying owner information of speeding vehicles using computer vision</h2>
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/3a96456c-80b2-41b7-b69a-26264493acb8.jpg">
+                    <img src="../assets//images/blog/AdobeStock_214539382-1800x0-c-default.jpeg">
                 </figure>
             </div>
             <div class="content">
-                <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa 
-                    <strong>strong</strong>. Cum sociis natoque penatibus 
-                    et magnis dis parturient montes, nascetur ridiculus 
-                    mus. Donec quam felis, ultricies nec, pellentesque 
-                    eu, pretium quis, sem. Nulla consequat massa quis 
-                    enim. Donec pede justo, fringilla vel, aliquet nec, 
-                    vulputate eget, arcu. In enim justo, rhoncus ut, 
-                    imperdiet a, venenatis vitae, justo. Nullam dictum 
-                    felis eu pede <a class="external ext" href="#">link</a> 
-                    mollis pretium. Integer tincidunt. Cras dapibus. 
-                    Vivamus elementum semper nisi. Aenean vulputate 
-                    eleifend tellus. Aenean leo ligula, porttitor eu, 
-                    consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-                    dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-                    viverra nulla ut metus varius laoreet. Quisque rutrum. 
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. 
-                    Curabitur ullamcorper ultricies nisi.</p>
-                    <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <h3>Aenean commodo ligula eget dolor aenean massa</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Domain</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Computer Vision
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Business</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Enterprise 
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Situation</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Driving with excessive speed and Drunken driving are the predominant reasons why road accidents to happen. While the authorities resort to the implementation of traffic signals to regulate traffic within city limits, things get difficult for the police to identify and charge those drivers who disregard traffic laws in the highways.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Complication</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The client, a digital infrastructure company working on building an expressway had deployed cameras that would actively monitor and sense the speed of vehicles as they passed by. The client wanted to use the installed cameras to identify drivers who drive at speeds over the permitted limit. The client had to submit this information to the government officials for them to go ahead with the legal proceedings.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Solution</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The computer-vision based solution we built to identifying owner information has three parts:
+                            <ol>
+                                <li>number-plate image capturing </li>
+                                <li>character recognition</li>
+                                <li>Owner information extraction</li>
+                            </ol> <br>
+                        </p>
+
+                        <p>
+                            We made use of the high shutter-speed cameras the client had installed to capture the images of vehicles. This captured image is then processed with a noise-filtering algorithm that reduces the significant noise in the subject. After this process, the image is then fed into a CNN based number plate image capturing model that identifies the number plate from the overall image.
+                        </p>
+                        <p>
+                            After the CNN successfully identifies the number plate, the image is cropped only to contain the number plate. This is then fed into another CNN model that has been trained to do digits classification which identifies and outputs the vehicle registration number. This registration number is then queried from within the official database to pull the information of the vehicle’s owner.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Impact</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Through this solution, the client was able to bring down the requirement of the number of highway patrol teams from 10 for every 100 kilometres to 4 for every 100 kilometres.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
