--- a/Pages/blog1.html
+++ b/Pages/blog1.html
@@ -122,47 +122,87 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>How to become a sucessful businessman.</h2>
+                <h2>Accelerating New Product Development Research using NLPU</h2>
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/3a96456c-80b2-41b7-b69a-26264493acb8.jpg">
+                    <img src="../assets//images/blog/digitalproddev.png">
                 </figure>
             </div>
             <div class="content">
-                <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa 
-                    <strong>strong</strong>. Cum sociis natoque penatibus 
-                    et magnis dis parturient montes, nascetur ridiculus 
-                    mus. Donec quam felis, ultricies nec, pellentesque 
-                    eu, pretium quis, sem. Nulla consequat massa quis 
-                    enim. Donec pede justo, fringilla vel, aliquet nec, 
-                    vulputate eget, arcu. In enim justo, rhoncus ut, 
-                    imperdiet a, venenatis vitae, justo. Nullam dictum 
-                    felis eu pede <a class="external ext" href="#">link</a> 
-                    mollis pretium. Integer tincidunt. Cras dapibus. 
-                    Vivamus elementum semper nisi. Aenean vulputate 
-                    eleifend tellus. Aenean leo ligula, porttitor eu, 
-                    consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-                    dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-                    viverra nulla ut metus varius laoreet. Quisque rutrum. 
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. 
-                    Curabitur ullamcorper ultricies nisi.</p>
-                    <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <h3>Aenean commodo ligula eget dolor aenean massa</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Domain</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Automotive R&D
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Customer type</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Enterprise Fortune 500 company
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Situation</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            New Product Development in the automotive industry is a research & capital-intensive process. It takes, on an average, 2 years for an automotive company to study, ideate & come up with the design for the initial prototype. It takes an equal amount of time to then build, test, improvize and get the vehicle ready for a market launch.
+                        </p>
+                        <p>
+                            A lot of engineering conversations that dominate the initial R&D days tend to be repetitive and time-consuming. There’s usually a lot of data in the form of paperwork and documentation from the previous design cycles that can provide immensely valuable insights. Yet, studying them thoroughly would extend the design cycle even further.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Resolution</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            We utilized state-of-the-art Machine Learning and Natural Language Processing concepts to build an ideation engine. 
+                        </p>
+                        <p>
+                            The end-to-end process that we adopted to arrive at the solution is as follows:
+                            <ul>
+                                <li>
+                                    Thoroughly analyze existing engineering text data and label them according to the nature of the problem.
+                                </li>
+                                <li>
+                                    A Transformer that would study from this labelled dataset and learn to automatically label future engineering conversations thereby reducing dependency on Subject matter experts.
+                                </li>
+                                <li>
+                                    Build a complex AI engine that implements an NLP model using the technique of word embedding to which the labelled data would be fed.
+                                </li>
+                                <li>
+                                    This engine would analyze and extract the learning outcomes of these conversations and interprets the associated risk.
+                                </li>
+                                <li>
+                                    The insights gained would then be communicated to researches through a User-interface enabling them make quick decisions.
+                                </li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Impact</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The system has not only reduced the duration of the design cycle in half, but also has resulted in significant cost savings for the R&D department. The client is also in plans to implement the solution for all their future R&D processes.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
