--- a/Pages/blog3.html
+++ b/Pages/blog3.html
@@ -122,47 +122,81 @@
     <section class="blog-content">
         <div class="auto-container">
             <div class="sec-title">
-                <h2>How an emerging B2B SaaS startup built its end-to-end Data pipeline</h2>
+                <h2>Sentiment Classification using NLP techniques to optimize Customer Experience</h2>
             </div>
             <div class="blog-image" >
                 <figure>
-                    <img src="../assets//images/blog/3a96456c-80b2-41b7-b69a-26264493acb8.jpg">
+                    <img src="../assets//images/blog/AdobeStock_214539382-1800x0-c-default.jpeg">
                 </figure>
             </div>
             <div class="content">
-                <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa 
-                    <strong>strong</strong>. Cum sociis natoque penatibus 
-                    et magnis dis parturient montes, nascetur ridiculus 
-                    mus. Donec quam felis, ultricies nec, pellentesque 
-                    eu, pretium quis, sem. Nulla consequat massa quis 
-                    enim. Donec pede justo, fringilla vel, aliquet nec, 
-                    vulputate eget, arcu. In enim justo, rhoncus ut, 
-                    imperdiet a, venenatis vitae, justo. Nullam dictum 
-                    felis eu pede <a class="external ext" href="#">link</a> 
-                    mollis pretium. Integer tincidunt. Cras dapibus. 
-                    Vivamus elementum semper nisi. Aenean vulputate 
-                    eleifend tellus. Aenean leo ligula, porttitor eu, 
-                    consequat vitae, eleifend ac, enim. Aliquam lorem ante, 
-                    dapibus in, viverra quis, feugiat a, tellus. Phasellus 
-                    viverra nulla ut metus varius laoreet. Quisque rutrum. 
-                    Aenean imperdiet. Etiam ultricies nisi vel augue. 
-                    Curabitur ullamcorper ultricies nisi.</p>
-                    <h3>Lorem ipsum dolor sit amet consectetuer adipiscing 
-                    elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-                    <h3>Aenean commodo ligula eget dolor aenean massa</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing 
-                    elit. Aenean commodo ligula eget dolor. Aenean massa. 
-                    Cum sociis natoque penatibus et magnis dis parturient 
-                    montes, nascetur ridiculus mus. Donec quam felis, 
-                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Domain</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            B2B SaaS
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Customer-type:</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            B2B SaaS marketplace
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>Overview</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The perception a customer holds towards a brand can reveal a lot of hidden insights about its functioning. Understanding customer perception and working on improving it mission-critical for companies to retain existing customers and acquire new customers.
+                        </p>
+                        <p>
+                            Sentiment analysis is a popular way for organizations to determine and categorize opinions about a product, service, or idea. It can help determine the opinions of customers by analysing their public opinions about topics and gain valuable insights which in turn can help provide better customer experiences.
+                        </p>
+                        <p>
+                            However, platforms like social media and public forums where one could find such conversations are often opinionated, and the process of filtering the signal from the noice can prove to be really difficult.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>The Problem</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The client, who runs an online marketplace that provides freelancers a platform to sell their services, wanted to understand and improve their brand perception. They had a team which would examine popular social media platforms and public forums trying to analyse and understand what the customers are talking about and asking for. This was a really inefficient way of solving the problem and it was taking them nowhere. Upon realising this, the client approached Pinhead analytics looking for ways to optimize the entire process.
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>The Solution</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            Our team first analyzed the problem at hand thoroughly and built an initial rule-based system which would analyze and flag conversations as either positive or negative sentiments. We then used this flagged data to train a complex, BERT transfomer-based architecture model that helped identify not just the sentiment, but also the subject of the conversations. 
+
+                        </p>
+                    </div>
+                </div>
+                <div class="sub-section">
+                    <div class="sub-title">
+                        <h3>The Impact</h3>
+                    </div>
+                    <div class="sub-content">
+                        <p>
+                            The sentiment classifier tool helped the client understand customer perception faster, and in a better manner. With the insights obtained from the classifier, the client built two additional features to their software which in turn produced a 28% MoM increase in the number of free-to-paid conversions.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
