--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
                                     <li class="current"><a href="index.html">Home</a></li>
-                                    <li><a href="#case-study">Case Study</a></li>
+                                    <li><a href="#case-study">Case Studies</a></li>
                                     <li><a href="Pages/contactUs.html">Contact Us</a></li>
                                 </ul>
                             </div>
@@ -136,7 +136,7 @@
                         <p>Fulfil your Data requirements with experts who can both set up the infrastructure & extract
                             valuable insights.</p>
                         <div class="btn-box">
-                            <a href="index.html" class="theme-btn style-one">Learn More</a>
+                            <a href="index.html" class="theme-btn style-one">Get Started</a>
                             <!-- <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image video-btn" data-caption=""><i class="flaticon-play"></i>Watch Video</a> -->
                         </div>
                     </div>
@@ -505,7 +505,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="javascript:void(0);">Customer Journey mapping for a DTC Brand</a></h3>
+                                <h3><a href="Pages/blog1.html">Customer Journey mapping for a DTC Brand</a></h3>
                                 <span>June 2021</span>
                             </div>
                         </div>
@@ -522,7 +522,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="javascript:void(0);">Digital marketing strategies for a DTC Brand</a></h3>
+                                <h3><a href="Pages/blog2.html">Digital marketing strategies for a DTC Brand</a></h3>
                                 <span>July 2021</span>
                             </div>
                         </div>
@@ -539,7 +539,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="javascript:void(0);">Identification of Retention drivers for a B2B SaaS</a>
+                                <h3><a href="Pages/blog3.html">Identification of Retention drivers for a B2B SaaS</a>
                                 </h3>
                                 <span>August 2021</span>
                             </div>
@@ -557,7 +557,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="javascript:void(0);">Digital marketing audit for an Online services
+                                <h3><a href="Pages/BusinessIntelligence.html">Digital marketing audit for an Online services
                                         marketplace</a></h3>
                                 <span>August 2021</span>
                             </div>
@@ -575,7 +575,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="javascript:void(0);">Smart Bundles creation for a DTC Brand</a></h3>
+                                <h3><a href="Pages/BusinessIntelligence.html">Smart Bundles creation for a DTC Brand</a></h3>
                                 <span>October 2021</span>
                             </div>
                         </div>
@@ -592,7 +592,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="javascript:void(0);">End-to-end data pipeline for a B2B SaaS</a></h3>
+                                <h3><a href="Pages/MachienLearning.html">End-to-end data pipeline for a B2B SaaS</a></h3>
                                 <span>November 2021</span>
                             </div>
                         </div>
@@ -958,7 +958,7 @@
                                 <div class="widget-content">
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="#case-study">Case Study</a></li>
+                                        <li><a href="#case-study">Case Studies</a></li>
                                         <li><a href="Pages/contactUs.html">Contact Us</a></li>
                                     </ul>
                                 </div>
