--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/BusinessIntelligence.html">Smart Bundles creation for a DTC Brand</a></h3>
+                                <h3><a href="Pages/dataengineering.html">Smart Bundles creation for a DTC Brand</a></h3>
                                 <span>October 2021</span>
                             </div>
                         </div>
