--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
     <section class="project-section">
         <div class="auto-container">
             <div class="sec-title text-center">
-                <p>Projects</p>
+                <p>Case Studies</p>
                 <h2>Our Showcase</h2>
             </div>
             <div class="row clearfix">
@@ -505,7 +505,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/blog1.html">Customer Journey mapping for a DTC Brand</a></h3>
+                                <h3><a href="Pages/case-study1.html">Customer Journey mapping for a DTC Brand</a></h3>
                                 <span>June 2021</span>
                             </div>
                         </div>
@@ -522,7 +522,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/blog2.html">Digital marketing strategies for a DTC Brand</a></h3>
+                                <h3><a href="Pages/case-study2.html">Digital marketing strategies for a DTC Brand</a></h3>
                                 <span>July 2021</span>
                             </div>
                         </div>
@@ -539,7 +539,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/blog3.html">Identification of Retention drivers for a B2B SaaS</a>
+                                <h3><a href="Pages/case-study3.html">Identification of Retention drivers for a B2B SaaS</a>
                                 </h3>
                                 <span>August 2021</span>
                             </div>
@@ -557,7 +557,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/BusinessIntelligence.html">Digital marketing audit for an Online services
+                                <h3><a href="Pages/case-study4.html">Digital marketing audit for an Online services
                                         marketplace</a></h3>
                                 <span>August 2021</span>
                             </div>
@@ -575,7 +575,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/dataengineering.html">Smart Bundles creation for a DTC Brand</a></h3>
+                                <h3><a href="Pages/case-study5.html">Smart Bundles creation for a DTC Brand</a></h3>
                                 <span>October 2021</span>
                             </div>
                         </div>
@@ -592,7 +592,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/MachienLearning.html">End-to-end data pipeline for a B2B SaaS</a></h3>
+                                <h3><a href="Pages/case-study6.html">End-to-end data pipeline for a B2B SaaS</a></h3>
                                 <span>November 2021</span>
                             </div>
                         </div>
