--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 content-column">
                     <div class="content-box wow fadeInUp" data-wow-delay="300ms" data-wow-duration="700ms">
                         <h1>We make your Data<br /> <span> work for you.</span> </h1>
-                        <p>Fulfil your Data requirements with experts who can both set up the infrastructure & extract
-                            valuable insights.</p>
+                        <p>Augment your data team with experts who can both set up the infrastructure & extract valuable insights.</p>
                         <div class="btn-box">
                             <a href="index.html" class="theme-btn style-one">Get Started</a>
                             <!-- <a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="lightbox-image video-btn" data-caption=""><i class="flaticon-play"></i>Watch Video</a> -->
@@ -505,7 +504,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/case-study1.html">Customer Journey mapping for a DTC Brand</a></h3>
+                                <h3><a href="Pages/case-study1.html">Accelerating New Product Development Research using NLPU</a></h3>
                                 <span>June 2021</span>
                             </div>
                         </div>
@@ -522,7 +521,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/case-study2.html">Digital marketing strategies for a DTC Brand</a></h3>
+                                <h3><a href="Pages/case-study2.html">Hyperpersonalized Product Promotion for eCommerce using Advanced Machine Learning</a></h3>
                                 <span>July 2021</span>
                             </div>
                         </div>
@@ -539,7 +538,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/case-study3.html">Identification of Retention drivers for a B2B SaaS</a>
+                                <h3><a href="Pages/case-study3.html">Sentiment Classification using NLP techniques to optimize Customer Experience</a>
                                 </h3>
                                 <span>August 2021</span>
                             </div>
@@ -557,8 +556,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/case-study4.html">Digital marketing audit for an Online services
-                                        marketplace</a></h3>
+                                <h3><a href="Pages/case-study4.html">Optimizing the quality of online courses through effective evaluation techniques</a></h3>
                                 <span>August 2021</span>
                             </div>
                         </div>
@@ -575,7 +573,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/case-study5.html">Smart Bundles creation for a DTC Brand</a></h3>
+                                <h3><a href="Pages/case-study5.html">Building and deployment of a smart News Recommendation System</a></h3>
                                 <span>October 2021</span>
                             </div>
                         </div>
@@ -592,7 +590,7 @@
                                     data-fancybox="gallery"><i class="fas fa-search-plus"></i></a>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="Pages/case-study6.html">End-to-end data pipeline for a B2B SaaS</a></h3>
+                                <h3><a href="Pages/case-study6.html">Identifying owner information of speeding vehicles using computer vision</a></h3>
                                 <span>November 2021</span>
                             </div>
                         </div>
@@ -953,7 +951,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
                             <div class="footer-widget links-widget">
                                 <div class="widget-title">
-                                    <h3>Important Links</h3>
+                                    <h3>Quick Links</h3>
                                 </div>
                                 <div class="widget-content">
                                     <ul>
