--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
         <div class="auto-container">
             <div class="content-box text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="700ms">
                 <h2>Start your Data transformation <br /> Journey with Pinhead Analytics today!</h2>
-                <a href="index.html" class="theme-btn style-three">Talk to us</a>
+                <a href="Pages/contactUs.html" class="theme-btn style-three">Talk to us</a>
             </div>
         </div>
     </section>
