--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
         </div>
     </section>
     <!-- cta-sectione end -->
-
+<!-- </body> -->
 
     <!-- main-footer -->
     <footer class="main-footer">
